[package]
name = "proj"
version = "0.1.0"
authors = ["Ezra Celli <ezra@onerockwell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
